# roulin

./: .example.env  .example.peer.env  .example.prod.env  .gitignore  CMakeLists.txt  README.ja.md  README.md  Taskfile.yml  compose.peer.yml  compose.prod.yml  compose.yml
.github/workflows/: build.yml  ci.yml
core/: CMakeLists.txt
core/bindings/c/: error_internal.h  roulin.cpp  roulin.h
core/include/roulin/: blob_reader.h  blob_store.h  cipher.h  compressor.h  diff.h  hash.h  hasher.h  index.h  parcel.h  version.h
core/schema/: blob_meta.fbs  index.fbs
core/src/: hash.cpp  version.cpp
core/src/algo/cipher/: chacha20_cipher.cpp  chacha20_cipher.h  cipher.cpp  custom_cipher.cpp  custom_cipher.h
core/src/algo/compressor/: compressor.cpp
core/src/algo/hash/: blake3_hash.h  blake3_hasher.cpp  custom_hash.cpp  custom_hash.h  hasher.cpp
core/src/parcel/: address_hash.h  diff.cpp  index.cpp  parcel.cpp
core/src/storage/: blob_reader.cpp  blob_store.cpp
core/tests/: CMakeLists.txt  blob_store_test.cpp  diff_test.cpp  index_test.cpp  pipeline_test.cpp  storage_test.cpp
docker/cpp-build/: Dockerfile.android  Dockerfile.linux
docker/roulin/: Dockerfile
docs/: unity.md
fetch/: CMakeLists.txt
fetch/android/: CMakeLists.txt
fetch/android/include/roulin/fetch/: android_fetcher.h
fetch/android/kotlin/: build.gradle.kts  settings.gradle.kts
fetch/android/kotlin/src/main/kotlin/io/roulin/fetch/: AndroidFetcher.kt
fetch/android/src/: android_entry.h  android_error_classifier.cpp  android_error_classifier.h  android_fetcher.cpp  android_handle_consumer.cpp  android_handle_consumer.h  android_jni.h
fetch/apple/: CMakeLists.txt
fetch/apple/include/roulin/fetch/: apple_fetcher.h
fetch/apple/src/: apple_entry.h  apple_error_classifier.h  apple_error_classifier.mm  apple_fetcher.mm  apple_handle_consumer.h  apple_handle_consumer.mm
fetch/bindings/c/: fetch.cpp  fetch.h
fetch/desktop/: CMakeLists.txt
fetch/desktop/include/roulin/fetch/: desktop_fetcher.h
fetch/desktop/src/common/: desktop_backend.cpp  desktop_backend.h  desktop_fetcher.cpp  worker.cpp  worker.h  worker_inbox.cpp  worker_inbox.h
fetch/desktop/src/libcurl/: libcurl_backend.cpp  libcurl_backend.h  libcurl_config_builder.cpp  libcurl_config_builder.h  libcurl_entry.h  libcurl_error_classifier.cpp  libcurl_error_classifier.h  libcurl_handle_consumer.cpp  libcurl_handle_consumer.h
fetch/desktop/src/winhttp/: winhttp_attempt.cpp  winhttp_attempt.h  winhttp_backend.cpp  winhttp_backend.h  winhttp_entry.h  winhttp_error_classifier.cpp  winhttp_error_classifier.h  winhttp_handle_consumer.cpp  winhttp_handle_consumer.h
fetch/share/: CMakeLists.txt
fetch/share/include/roulin/fetch/: entry_registry.h  error_classifier.h  fetcher.h  handle_consumer_base.h  hashed_writer.h  session.h
fetch/share/src/: hashed_writer.cpp  session.cpp
fetch/share/tests/: CMakeLists.txt  hashed_writer_test.cpp  session_test.cpp
fetch/tests/: CMakeLists.txt  fetch_pipeline_test.cpp
plugins/unity/: package.json
plugins/unity/Editor/: Roulin.Editor.asmdef  RoulinServerClient.cs  RoulinUtil.cs  SetupChecker.cs
plugins/unity/Editor/Diagnostics/: BuildReport.cs  RoulinDebugWindow.cs
plugins/unity/Editor/PackRule/: AasReconciler.cs  IRoulinPackRule.cs  RoulinPackRule.cs  RoulinPackRuleRegistry.cs
plugins/unity/Editor/Settings/: RoulinEditorSettings.cs
plugins/unity/Editor/Sync/: RoulinAssetWatcher.cs  RoulinSyncContextMenu.cs  RoulinSyncService.cs  RoulinSyncWindow.cs
plugins/unity/Editor/Tests/: AddressablesGroupsViewTests.cs  BlobMetaConverterTests.cs  BundleLookupTests.cs  CollectBlobMetasTests.cs  CrossAssetObjectIdDriftProbeTests.cs  ObjectIdReferenceInvariantProbeTests.cs  ParcelBuilderTests.cs  RestoreBlobMetasOutOfPayloadObjectIdDriftTests.cs  RestoreBlobMetasOwnHashDriftTests.cs  RestoreBlobMetasPayloadDepDriftTests.cs  RestoreBlobMetasTests.cs  RestoreParityTests.cs  Roulin.Editor.Tests.asmdef  RoulinBundleDepClosureTests.cs  RoulinCacheTests.cs  RoulinCatalogTests.cs  VcsDiffPathNormalizerTests.cs  WsfEntryHashTests.cs
plugins/unity/Editor/Vcs/: VcsDiffClient.cs  VcsDiffPathNormalizer.cs
plugins/unity/Runtime/: Roulin.asmdef  Roulin.cs
plugins/unity/Runtime/Cache/: IRoulinCache.cs  RoulinCache.cs
plugins/unity/Runtime/Catalog/: RoulinAssetProvider.cs  RoulinBundleProvider.cs  RoulinBundleResource.cs  RoulinInstanceProvider.cs  RoulinLocator.cs  RoulinResourceLocation.cs
plugins/unity/Runtime/HotReload/: HotReloadController.cs  RoulinHotReloadDriver.cs  RoulinSseClient.cs
plugins/unity/Runtime/HotReload/AssetReplace/: AudioClipReplacer.cs  IAssetReplace.cs  MaterialReplacer.cs  MeshReplacer.cs  PrefabReplacer.cs  ScriptableObjectReplacer.cs  SpriteReplacer.cs  Texture2DReplacer.cs
plugins/unity/Runtime/Native/: RoulinBlobStream.cs  RoulinFetchNative.cs  RoulinNative.cs
plugins/unity/Runtime/Net/: RoulinFetchHttp.cs  RoulinFetcher.cs
plugins/unity/Runtime/Pairing/: RoulinPairing.cs
tools-dev/build-cpp/: go.mod  main.go
tools-dev/build-cpp/toolchains/: android-arm64.cmake  ios-arm64.cmake  macos-arm64.cmake  macos-x86_64.cmake
tools-dev/generate-fbs/: go.mod  main.go
tools-dev/pipeline-verify/: go.mod  go.sum  main.go
tools/roulin/: go.mod  go.sum
tools/roulin/cmd/roulin-cli/: main.go
tools/roulin/cmd/roulin-server/: main.go
tools/roulin/internal/cmd/cli/: init.go  inspect.go  revisions.go  root.go  watch.go
tools/roulin/internal/cmd/servercmd/: serve.go  serve_env.go
tools/roulin/internal/device/: android.go  host.go  ios.go  send.go  target.go
tools/roulin/internal/log/: handler.go  setup.go
tools/roulin/internal/serve/server/: handler_blob.go  handler_blob_meta.go  handler_blob_test.go  handler_diff.go  handler_diff_test.go  handler_index.go  handler_index_test.go  handler_patches.go  handler_patches_test.go  handler_post_blob.go  handler_sse.go  (+9 more)
tools/roulin/internal/storage/: cached.go  fake.go  storage.go
tools/roulin/test/: blob_meta_test.go  build_api_test.go  git_adapter_test.go  s3_storage_integration_test.go  server_test.go  sse_test.go
(+5 files in other folders)
